# mcp-share-standards

./: .gitignore  Dockerfile  README.md  config.yaml  deploy.ps1  fly.toml  license  pyproject.toml  requirements.txt  run.py  test_server.py
.github/workflows/: deploy.yml
ide-configs/: cursor-mcp-sse.json  vscode-settings.json
infra/: main.bicep  main.bicepparam
src/standards_server/: __init__.py  models.py  server.py
src/standards_server/stores/: __init__.py  audit_store.py  rules_store.py  skills_store.py
standards/csharp/rules/: documentation.md  error-handling.md  import-ordering.md  naming-conventions.md  patterns.md  project-structure.md  testing.md
standards/csharp/skills/api-design/: SKILL.md
standards/csharp/skills/code-review/: SKILL.md
standards/csharp/skills/configuration/: SKILL.md
standards/csharp/skills/dependency-injection/: SKILL.md
standards/csharp/skills/docker-deploy/: SKILL.md
standards/csharp/skills/ef-core-migrations/: SKILL.md
standards/csharp/skills/logging/: SKILL.md
standards/csharp/skills/project-scaffolding/: SKILL.md
standards/csharp/skills/refactoring/: SKILL.md
standards/csharp/skills/test-generation/: SKILL.md
